--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "irene-habegger",
+  "name": "f-save",
   "description": "Register of food to save",
   "version": "1.0.0",
   "author": "Xaver Fleer",
